fix: 코드래빗 피드백 수정 및 커밋 경고 해결